--- a/app/index.html
+++ b/app/index.html
@@ -108,15 +108,15 @@
     </div>
   </div>
 
-  <div id="testimonials" class="page-section page-section--testimonials">
-    <div class="wrapper">
+  <div id="testimonials" class="page-section page-section--testimonials page-section--no-b-padding-until-large">
+    <div class="wrapper wrapper--no-padding-until-large">
       <h2 class="section-title section-title--blue"><img src="assets/images/icons/comment.svg" class="section-title__icon"> Real <strong>Testimonials</strong></h2>
 
-      <div class="row row--gutters row--gutters-small row--equal-height-at-medium row--t-pading generic-content-container">
-        <div class="row__medium-4">
+      <div class="row row--gutters row--gutters-small row--equal-height-at-large row--t-pading generic-content-container">
+        <div class="row__large-4">
           <div class="testimonial">
             <div class="testimonial__photo">
-              <img src="assets/images/testimonial-jane.jpg">
+              <img sizes="160px" srcset="assets/images/testimonial-jane.jpg 160w, assets/images/testimonial-jane-hi-dpi.jpg 320w" alt="Jane Doe">
             </div>
             <h3 class="testimonial__title">Jane Doe</h3>
             <h4 class="testimonial__subtitle">9 Time Escaper</h4>
@@ -125,10 +125,10 @@
                 amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.&rdquo;</p>
           </div>
         </div>
-        <div class="row__medium-4">
+        <div class="row__large-4">
           <div class="testimonial">
             <div class="testimonial__photo">
-              <img src="assets/images/testimonial-john.jpg">
+              <img sizes="160px" srcset="assets/images/testimonial-john.jpg 160w, assets/images/testimonial-john-hi-dpi.jpg 320w" alt="John Smith">
             </div>
             <h3 class="testimonial__title">John Smith</h3>
             <h4 class="testimonial__subtitle">4 Time Escaper</h4>
@@ -137,10 +137,10 @@
                 amet, consectetur.&rdquo;</p>
           </div>
         </div>
-        <div class="row__medium-4">
-          <div class="testimonial">
+        <div class="row__large-4">
+          <div class="testimonial testimonial--last">
             <div class="testimonial__photo">
-              <img src="assets/images/testimonial-cat.jpg">
+              <img sizes="160px" srcset="assets/images/testimonial-cat.jpg 160w, assets/images/testimonial-cat-hi-dpi.jpg 320w" alt="Cat McKitty">
             </div>
             <h3 class="testimonial__title">Cat McKitty</h3>
             <h4 class="testimonial__subtitle">6 Time Escaper</h4>
